--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Java Assignment 7 - 2D Graphics</name>
+	<name>Java Assignment 8 - Network Programming</name>
 	<comment></comment>
 	<projects>
 	</projects>
