--- a/.classpath
+++ b/.classpath
@@ -1,36 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-9">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/ks/eclipse-workspace/libraries/istack-commons-runtime-3.0.5.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/ks/eclipse-workspace/libraries/javax.activation-3.0-preview.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/ks/eclipse-workspace/libraries/jaxb-api-2.3.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/ks/eclipse-workspace/libraries/jaxb-core-2.3.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/ks/eclipse-workspace/libraries/jaxb-impl-2.3.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Kristian/Documents/Programming/Java/libraries/istack-commons-runtime-3.0.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kristian/Documents/Programming/Java/libraries/javax.activation-3.0-preview.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kristian/Documents/Programming/Java/libraries/jaxb-api-2.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kristian/Documents/Programming/Java/libraries/jaxb-core-2.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Kristian/Documents/Programming/Java/libraries/jaxb-impl-2.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
-
